{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 96,
  "lineage": "e0914745-b976-6dcb-b42f-385f6368560c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EksNodeGroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:838522581324:security-group/sg-0d9a67fa94155d82a",
            "description": "Security Group for all EKS Worker Nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9a67fa94155d82a",
            "ingress": [],
            "name": "EksClusterTf-NodeGroup",
            "name_prefix": null,
            "owner_id": "838522581324",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "EksClusterTf",
              "Environment": "dev",
              "Name": "EksClusterTf-NodeGroup",
              "kubernetes.io/cluster/EksClusterTf": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f201ec4c27127a6"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "EksControlPlane-Ingress-NodeGroups",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Control Plane to receive communication from pods and kubelets",
            "from_port": 443,
            "id": "sgrule-4123329545",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f894f76d939e967a",
            "self": false,
            "source_security_group_id": "sg-0d9a67fa94155d82a",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.EksNodeGroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "EksNodeGroup-Ingress-ControlPlane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes and kubelets to receive communication from EKS Control Plane",
            "from_port": 1025,
            "id": "sgrule-3627893476",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d9a67fa94155d82a",
            "self": false,
            "source_security_group_id": "sg-0f894f76d939e967a",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.EksNodeGroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "EksNodeGroup-Ingress-Self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with other",
            "from_port": 0,
            "id": "sgrule-1113280377",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d9a67fa94155d82a",
            "self": false,
            "source_security_group_id": "sg-0f894f76d939e967a",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.EksNodeGroup"
          ]
        }
      ]
    }
  ]
}